# cosmx-utilities

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: cellstatsdir-resegmentation-tree.txt
ec2/: .env.example  _common.py  ami_setup.sh  create_ami.py  ec2-operator-policy.json  instance-profile-permissions-policy.json  napari-viewer-policy.json  napari-viewer-trust-policy.json  start_ec2.py
ec2/analytics/: pyproject.toml
fargate/: .env.example  FARGATE-SETUP.md  fargate-task-process-slide.json  register-task-defs.sh
iam/: keene-cosmx-data-DELETER-policy.json  keene-cosmx-data-DELETER-trust-policy.json  keene-cosmx-data-bucket-policy.json
napari-cosmx-fork/: README.md  pyproject.toml
napari-cosmx-fork/src/napari_cosmx/: __init__.py  _dock_widget.py  _reader.py  _version.py  gemini.py  napari.yaml  pairing.py
napari-cosmx-fork/src/napari_cosmx/_tests/: test_dock_widget.py  test_gemini.py  test_ome_export.py  test_reader.py  test_stitch.py
napari-cosmx-fork/src/napari_cosmx/utils/: _patterns.py  _stitch.py  create_anndata.py  create_ome_zarr.py  export_tiff.py  load_images.py  read_targets.py  stitch_composite.py  stitch_encoded.py  stitch_expression.py  stitch_fovgrid.py  stitch_images.py  stitch_targets.py
scripts/: cell-type-histograms.py  cell-type-proportions.py  cell-type-sankey.py  dotplot-gene-expression.py  generate-slide-metadata.py  process-slide.py  process-slides.py  purge-s3-versions.py  sync-to-ec2.sh  umap-cell-types.py
util/: download-sample.sh  duckdb-s3-secret.sh  smoke-test.sh  test-docker.sh
