[project]
name = "cosmx-analytics"
version = "0.1.0"
requires-python = ">=3.11"
description = "CosMx spatial analytics: Jupyter notebooks with Polars"
dependencies = [
    "anndata>=0.12.10",
    "duckdb>=1.0.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
]
